j-project1-udn.yml
apiVersion: v1
kind: Namespace
metadata:
  name: j-project1
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
spec: {}
status: {}
