bad-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    you: me
  name: bad-pod
spec:
  serviceAccountName: chris-sa
  containers:
    - name: web
      imagePullPolicy: IfNotPresent
      image: docker.io/library/httpd:latest
      ports:
        - containerPort: 80
