borrow-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: borrow-app
  name: borrow-app
  namespace: jproject2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow-app
  strategy: {}
  template:
    metadata:
      labels:
        app: borrow-app
    spec:
      serviceAccountName: borrow-image
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/jproject1/webapp:latest
        name: webapp
        resources: {}
status: {}
