command-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24
        name: httpd-24
        ports:
        - containerPort: 8080
        resources: {}
status: {}
# oc create deployment frontend --image registry.access.redhat.com/ubi9/httpd-24 --port 8080 --replicas 4 --dry-run=client -o yaml > command-deployment.yml
