command-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: george
  name: george
spec:
  containers:
  - image: registry.access.redhat.com/ubi9/httpd-24
    name: george
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
