complex-cm-sec-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    you: me
  name: carl
spec:
  containers:
    - name: db
      image: docker.io/library/mysql
      ports:
        - containerPort: 3306
