vantor-patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vantor-app
spec:
  # ReplicaSet
  replicas: 2
  selector:
    matchLabels:
      you: me

  # Pod Format
  template:
    metadata:
      labels:
        you: me
        we: us
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24
        name: web
        ports:
        - containerPort: 8080
