app3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
spec:
  rules:
  - host: app3-project2.apps.lab.ocp.com
    http:
      paths:
      - backend:
          service:
            name: app3
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}

# oc create ingress app3-ingress --rule="app3-project2.apps.lab.ocp.com/*=app3:8080" --dry-run=client -o yaml > app3-ingress.yml
