allow-friends.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-friends
  namespace: project5
spec:
  podSelector:
    matchLabels:
      deployment: app5
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            dept: security
        podSelector:
          matchLabels:
            deployment: app6
      ports:
        - port: 8080
          protocol: TCP
